kyf/medilabback.yml
apiVersion: apps/v1
kind: Deployment
metadata:
        name: medilab-back
        labels:
                app: medilab-back
spec:
        replicas: 1
        selector:
                matchLabels:
                        app: medilab-back
        template:
                metadata:
                        labels:
                                app: medilab-back
                spec:
                        containers:
                                - name: medilab-back
                                  image: masrur121/medilab
                                  ports:
                                          - containerPort: 4400
