kyf/volume.yml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongo
  labels:
    app: mongo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongo
  template:
    metadata:
      labels:
        app: mongo
    spec:
      containers:
      - name: mongo
        image: mongo:latest
        ports:
        - containerPort: 27017
        resources:
          requests:
            cpu: 100m
            memory: 2Gi
          limits:
            cpu: 250m
            memory: 5Gi
        volumeMounts:
        - name: azure
          mountPath: /var/opt/az
      volumes:
      - name: azure
        persistentVolumeClaim:
          claimName: nginx-pv-claim
